--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
 
   cupertino_icons: ^1.0.2
 
+  dots_indicator: ^2.1.0
+  get: ^4.6.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
